# keynova

./: .eslintrc.cjs  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Prompt_Engineering_Init_Template.docx  README.md  ai_agent_adr_development_rules_v2.docx  decisions.md  keynova_technical_debt_report.docx  memory.md  package-lock.json  package.json  skill.md  tasks.md
src-tauri/: .gitignore  Cargo.toml  default_config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  platform_dirs.rs
src-tauri/src/app/: bootstrap.rs  control_server.rs  dispatch.rs  migration.rs  mod.rs  shortcuts.rs  state.rs  tray.rs  watchers.rs  window.rs
src-tauri/src/core/: action_registry.rs  agent_observation.rs  agent_runtime.rs  automation_engine.rs  builtin_command_registry.rs  command_router.rs  config_manager.rs  control_plane.rs  event_bus.rs  ipc_error.rs  knowledge_store.rs  mod.rs  observability.rs  plugin_runtime.rs  search_registry.rs  workflow_pipeline.rs
src-tauri/src/handlers/: agent.rs  ai.rs  automation.rs  builtin_cmd.rs  calculator.rs  feature.rs  file.rs  history.rs  hotkey.rs  launcher.rs  learning_material.rs  mod.rs  model.rs  mouse.rs  note.rs  nvim.rs  plugin.rs  search.rs  setting.rs  system_control.rs  system_monitoring.rs  terminal.rs  translation.rs  workspace.rs
src-tauri/src/managers/: ai_manager.rs  app_manager.rs  calculator_manager.rs  fake_provider.rs  history_manager.rs  hotkey_manager.rs  learning_material_manager.rs  mod.rs  model_manager.rs  mouse_manager.rs  note_manager.rs  portable_nvim_manager.rs  sandbox_manager.rs  search_manager.rs  search_service.rs  system_indexer.rs  system_manager.rs  tantivy_index.rs  terminal_manager.rs  translation_manager.rs  workspace_manager.rs
src-tauri/src/models/: action.rs  agent.rs  app.rs  builtin_command.rs  context_bundle.rs  hotkey.rs  ipc_requests.rs  learning_material.rs  mod.rs  plugin.rs  search_result.rs  terminal.rs  (+2 more)
(+136 files in other folders)
